# dentro

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml  pdoc.yml  pre-commit.yml  pytest.yml  test_runner.yml
docs/pics/: aliasing.png.REMOVED.git-id  program_logo.png.REMOVED.git-id
src/: cfr.py  games.py  plot.py  utils.py
src/ci/: utils.py
src/game/: README.md  rps.py  utils.py
src/plot/: README.md  bokeh.py  matplotlib.py  utils.py
src/plot/tests/: graph_test.py
src/tests/: __init__.py  game_test.py  graph_test.py  save_test.py
